[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Bullet/pngkey.com-bullet-png-796686.png" type="Texture" id=1]
[ext_resource path="res://Ressources/ReworkBullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.21056, 2.64967 )

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.1, 0.05 )
texture = ExtResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 2, 2 )
amount = 25
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 16, 8 )
spread = 180.0
gravity = Vector2( 0, 25 )
scale_amount = 1.4
color = Color( 0.878431, 0.694118, 0.0588235, 1 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
